tgthrProgramManagement/force-app/main/default/objects/Program_Theme__mdt/Program_Theme__mdt.object-meta.xml
<CustomObject>
    <label>Program Theme</label>
    <pluralLabel>Program Themes</pluralLabel>
    <description>Custom metadata type defining visual theme properties (colors, icons) for each program. Used by ProgramThemeService to drive LWC styling.</description>
</CustomObject>