tgthrProgramManagement/force-app/main/default/objects/Program_Theme__mdt/fields/AccentHex__c.field-meta.xml
<CustomField>
    <fullName>AccentHex__c</fullName>
    <label>Accent Hex</label>
    <type>Text</type>
    <length>10</length>
    <description>Accent hex color code for the program theme.</description>
</CustomField>