tgthrProgramManagement/force-app/main/default/objects/Program_Theme__mdt/fields/CodeHex__c.field-meta.xml
<CustomField>
    <fullName>CodeHex__c</fullName>
    <label>Color Hex</label>
    <type>Text</type>
    <length>10</length>
    <description>Primary hex color code for the program theme (e.g. #1E3A5F).</description>
</CustomField>