tgthrProgramManagement/force-app/main/default/objects/Program_Theme__mdt/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <label>Icon Name</label>
    <type>Text</type>
    <length>80</length>
    <description>SLDS icon name for the program (e.g. standard:account).</description>
</CustomField>