tgthrProgramManagement/force-app/main/default/objects/Program_Theme__mdt/fields/ImageResource__c.field-meta.xml
<CustomField>
    <fullName>ImageResource__c</fullName>
    <label>Image Resource</label>
    <type>Text</type>
    <length>255</length>
    <description>Static resource name for a program image or logo.</description>
</CustomField>