tgthrProgramManagement/force-app/main/default/objects/Program_Theme__mdt/fields/ProgramDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>ProgramDeveloperName__c</fullName>
    <label>Program Developer Name</label>
    <type>Text</type>
    <length>80</length>
    <description>The developer name / API name of the program. Used as lookup key in ProgramThemeService.</description>
</CustomField>