tgthrProgramManagement/force-app/main/default/objects/Program_Theme__mdt/fields/ProgramId__c.field-meta.xml
<CustomField>
    <fullName>ProgramId__c</fullName>
    <label>Program Id</label>
    <type>Text</type>
    <length>18</length>
    <description>The Salesforce Id of the associated Program record.</description>
</CustomField>